Fixed alignment issues: different screen size

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -220,7 +220,7 @@ nav ul {
 .testi-name {
     position: relative;
     left: 85px;
-    top: -62px;
+    top: -61px;
 }
 
 .testimonials h2 {
